[package]
name = "gpu_terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
luminance = "0.43.2"
# luminance-surfman-offscreen = { path = "luminance-surfman-offscreen" }
luminance-surfman-offscreen = { git = "https://github.com/Lucky4Luuk/luminance-surfman-offscreen.git" }
